--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@
 # limitations under the License.
 #
 
-artefactVersion=2.1.2
-projectUrl=https://onixbyte.com/JDevKit
-projectGithubUrl=https://github.com/OnixByte/JDevKit
+artefactVersion=2.1.3
+projectUrl=https://onixbyte.com/java-dev-kit
+projectGithubUrl=https://github.com/onixbyte/java-dev-kit
 licenseName=The Apache License, Version 2.0
 licenseUrl=https://www.apache.org/licenses/LICENSE-2.0.txt
