build: upgrade to version 2.3.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@
 # limitations under the License.
 #
 
-artefactVersion=2.2.0
-projectUrl=https://onixbyte.com/java-dev-kit
+artefactVersion=2.3.0
+projectUrl=https://onixbyte.com/projects/java-dev-kit
 projectGithubUrl=https://github.com/onixbyte/java-dev-kit
 licenseName=The Apache License, Version 2.0
-licenseUrl=https://www.apache.org/licenses/LICENSE-2.0.txt
+licenseUrl=https://onixbyte.com/projects/java-dev-kit/LICENSE.txt
